finish crud view and api NewsArticle and viewHistory

--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/NewsArticle/Index">NewsArticle</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/NewsArticle/History">NewsHistory</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
