--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
@@ -51,7 +51,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <div class="nav-item text-nowrap">
                         Welcome
+                         @if (Context.Request.Cookies["Role"] == "1")
+                        {
+                            <a asp-page="/SystemAccount/Profile" asp-route-id="@Context.Request.Cookies["Id"]"><strong>@Context.Request.Cookies["Email"]</strong></a>
+
+                        }else{
                         <strong>@Context.Request.Cookies["Email"]</strong>
+                            
+                        }
                         <a class="nav-link d-inline text-dark" asp-page="/Auth/Logout">Logout</a>
                     </div>
                 </div>
