--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/SystemAccount/Index">SystemAccount</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/NewsArticle/Report">NewsReport</a>
+                            </li>
                         }
 
                         @if (Context.Request.Cookies["Role"] == "1")
