--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Details.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Details.cshtml
@@ -65,7 +65,7 @@
 </div>
 
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.NewsArticle.NewsArticleId">Edit</a> |
-    <a href="javascript:history.back()">Back To Previous Page</a>
+    <a asp-page="./Edit" asp-route-id="@Model.NewsArticle.NewsArticleId" class="btn btn-primary">Edit</a> |
+    <a href="javascript:history.back()" class="btn btn-secondary">Back To Previous Page</a>
 
 </div>
