--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Create.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Create.cshtml
@@ -76,13 +76,9 @@
 
     <div class="form-group mt-4">
         <button type="submit" class="btn btn-primary">Create News Article</button>
-        <a asp-page="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-page="Index" class="btn btn-secondary">Cancel and Back to List</a>
     </div>
 </form>
-
-<div class="mt-3">
-    <a asp-page="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
