--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Edit.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/NewsArticle/Edit.cshtml
@@ -72,12 +72,12 @@
 
     <div class="form-group mt-4">
         <button type="submit" class="btn btn-primary">Update News Article</button>
-        <a asp-page="./Details" asp-route-id="@Model.NewsArticle.NewsArticleId" class="btn btn-secondary">Cancel</a>
+        <a asp-page="./Details" asp-route-id="@Model.NewsArticle.NewsArticleId" class="btn btn-secondary">Back to Details</a>
     </div>
 </form>
 
 <div class="mt-3">
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index" class="btn btn-secondary">Back to List</a>
 </div>
 
 @section Scripts {
