--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/SystemAccount/Index.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/SystemAccount/Index.cshtml
@@ -95,11 +95,14 @@
                     </td>
                 </tr>
             }
+
         }
-        }else{
-        <tr>
-            <td colspan="5" class="text-center">No records found</td>
-            }
+        else
+        {
+            <tr>
+                <td colspan="5" class="text-center">No records found</td>
+            </tr>
+        }
 
     </tbody>
 </table>
