--- a/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Category/Index.cshtml
+++ b/Group7_SE1733_A01_FE/Group7_SE1733_A01_FE/Pages/Category/Index.cshtml
@@ -42,18 +42,27 @@
         </tr>
     </thead>
     <tbody id="idTBody">
-        @foreach (var item in Model.Categories)
+        @if (Model.Categories != null && Model.Categories.Count > 0)
+        {
+            foreach (var item in Model.Categories)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.CategoryDesciption)</td>
+                    <td>@item.ParentCategory?.CategoryName</td>
+                    <td>@(item.IsActive == true ? "Active" : "Inactive")</td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@item.CategoryId">Edit</a> |
+                        <a asp-page="./Detail" asp-route-id="@item.CategoryId">Details</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.CategoryId">Delete</a>
+                    </td>
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.CategoryName)</td>
-                <td>@Html.DisplayFor(modelItem => item.CategoryDesciption)</td>
-                <td>@item.ParentCategory.CategoryName</td>
-                <td>@(item.IsActive == true ? "Active" : "Inactive")</td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-page="./Detail" asp-route-id="@item.CategoryId">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.CategoryId">Delete</a>
-                </td>
+                <td colspan="5" class="text-center">No records found</td>
             </tr>
         }
     </tbody>
